<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/QuestionEmoji"
                android:layout_width="137dp"
                android:layout_height="101dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/question_mark_emoji" />

            <TextView
                android:id="@+id/FirstP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/QuestionEmoji"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/firstPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/SecondP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FirstP"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/secondPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/ThirdP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SecondP"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/thirdPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/FourthP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ThirdP"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/fourthPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/FifthP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FourthP"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/fifthPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/sixthPar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FifthP"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/sixthPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/seventhPar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sixthPar"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="75dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/seventhPar"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />


        </RelativeLayout>

    </ScrollView>

</merge>